--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Originally from http://svn.pylucid.net/pylucid/CodeSnippets/ping.py
-This version maintained at http://github.com/samuel/python-ping
+This version maintained at http://github.com/stellarbit/asyncio-ping
